--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react-scripts": "2.1.1"
   },
   "scripts": {
-    "start": "nodemon server/server.js",
+    "start": "node server/server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
